--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ======================= Spring Android Project Readme ===========================
 To check out the project and build from source, do the following:
 
-git clone --recursive git://git.springsource.org/spring-mobile/spring-android.git
+git clone --recursive git://github.com/SpringSource/spring-android.git
 cd spring-android
 ./gradlew build
 
@@ -9,7 +9,7 @@ Note: the --recursive switch above is important, as spring-mobile uses
 git submodules, which must themselves be cloned and initialized. If --recursive
 is omitted, a full checkout becomes the multi-step process of:
 
-git clone git://git.springsource.org/spring-mobile/spring-android.git
+git clone git://github.com/SpringSource/spring-android.git
 git submodule init
 git submodule update
 
