--- a/docs/src/info/changelog.txt
+++ b/docs/src/info/changelog.txt
@@ -1,6 +1,28 @@
 Spring Android
 ================================
 
+1.0.0.M4 (2011.07.19)
+
+Minimum Requirements:
+* This release is now being built against Android 2.1 update 1 (API Level 7).
+  Previous Android versions are no longer officially supported.
+
+New Features
+* Support for Spring Social 1.0.0.RC1 in Spring Android Auth. The known issues
+  in Spring Social 1.0.0.M3 have been resolved in the 1.0.0.RC1 release.
+* Support for Spring Security 3.1.0.RC2 in Spring Android Auth
+* Updated RestTemplate to be compatible with Spring Framework 3.1.0.M2
+* Added gzip compression support in Rest Template.
+* Added support for Google's GSON JSON parsing library.
+* Updated support for Jackson 1.8.3
+* Fixed several issues in the JavaDoc
+* Several bug fixes
+
+Deprecated:
+* Deprecated CommonsClientHttpRequestFactory and supporting classes. Commons
+  Client support is now deprecated in Spring Framework 3.1.0.M2
+
+
 1.0.0.M3 (2011.05.10)
 
 New Features
